--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,48 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# from my own gitignore
+*.xd
+*.fig
+*.sketch
+.prettierignore
+.DS_Store
+notes.md
+/node_modules
+README-template.md
+style-guide.md
+/design
+.markdownlint.json
+/coverage
+/dist/
+src/**/output
+/.vscode
+
+# Local Netlify folder
+.netlify
