--- a/package.json
+++ b/package.json
@@ -9,16 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^2.1.0",
+    "gray-matter": "^4.0.3",
+    "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "bright": "0.8.4",
+    "date-fns": "2.30.0",
+    "js-cookie": "3.0.5",
+    "react-feather": "2.0.10",
+    "eslint": "8.43.0",
+    "eslint-config-next": "13.4.6",
+    "framer-motion": "10.14",
+    "new-component": "5.0.2",
+    "next-mdx-remote": "4.4.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "eslint-config-next": "14.1.0",
+    "typescript": "^5"
   }
 }
