--- a/package.json
+++ b/package.json
@@ -9,20 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "clsx": "^2.1.0",
-    "gray-matter": "^4.0.3",
-    "next": "14.1.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "@emotion/react": "^11.11.4",
     "bright": "0.8.4",
+    "clsx": "^2.1.0",
     "date-fns": "2.30.0",
-    "js-cookie": "3.0.5",
-    "react-feather": "2.0.10",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
     "framer-motion": "10.14",
+    "gray-matter": "^4.0.3",
+    "js-cookie": "3.0.5",
     "new-component": "5.0.2",
-    "next-mdx-remote": "4.4.1"
+    "next": "14.1.0",
+    "next-mdx-remote": "4.4.1",
+    "react": "^18",
+    "react-awesome-reveal": "^4.2.8",
+    "react-dom": "^18",
+    "react-feather": "2.0.10"
   },
   "devDependencies": {
     "@types/node": "^20",
